designer extension and plugin

--- a/webflow-vite-plugin/index.html
+++ b/webflow-vite-plugin/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head> 
+  <head>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <link rel="stylesheet" href="/reset.css">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
