--- a/designer-extension/index.html
+++ b/designer-extension/index.html
@@ -1,10 +1,33 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
-  <head> 
-  </head>
-  <body>
-    <link rel="stylesheet" href="/reset.css">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>window.webflowDesignerApiVersion = "2"; window.webflowDesignerApiFeatureFlags = { "on": [], "off": [] }</script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/gen/js/entrypoint-designer-extensions-client.b2214bad371ceaf58fb1.js"></script>
+  <style>
+    ::-webkit-scrollbar {
+      width: 8px
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: #363636;
+      border-left: 1px solid #2b2b2b;
+      border-right: 1px solid #2b2b2b
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #5e5e5e;
+      border: 1px solid #2b2b2b;
+      border-radius: 0
+    }
+  </style>
+  <title>Image Alt Text Gererator</title>
+</head>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
